force-app/main/default/objects/Form_Name__c/fields/Agency_Instructions_For_Bulk_Filers__c.field-meta.xml
<CustomField>
    <fullName>Agency_Instructions_For_Bulk_Filers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Instructions For Bulk Filers</label>
    <type>Checkbox</type>
</CustomField>