force-app/main/default/objects/Form_Name__c/fields/Changes_to_Amendment_requirements_no_L_R__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Amendment_requirements_no_L_R__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link/Resource</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>