force-app/main/default/objects/Form_Name__c/fields/File_Encryption_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>File_Encryption_Requirements_Notes__c</fullName>
    <label>File Encryption Requirements Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>