force-app/main/default/objects/Form_Name__c/fields/File_Size_Limitation_Notes__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Limitation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Size Limitation Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>