force-app/main/default/objects/Form_Name__c/fields/File_Size_Limitation_Notes_Link_Resource__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Limitation_Notes_Link_Resource__c</fullName>
    <label>Link/Resource</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>