force-app/main/default/objects/Form_Name__c/fields/Generic_Custom_Form_Change_Notes__c.field-meta.xml
<CustomField>
    <fullName>Generic_Custom_Form_Change_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Generic / Custom Form Change Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>