force-app/main/default/objects/Form_Name__c/fields/Portal_Capabilities_for_Gusto_to_Utilize__c.field-meta.xml
<CustomField>
    <fullName>Portal_Capabilities_for_Gusto_to_Utilize__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Capabilities for Gusto to Utilize</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>