force-app/main/default/objects/Form_Name__c/recordTypes/Annual_Filing_Form_1099.recordType-meta.xml
<RecordType>
    <fullName>Annual_Filing_Form_1099</fullName>
    <active>true</active>
    <label>5. Annual Filing (Form 1099)</label>
</RecordType>