force-app/main/default/objects/Form_Name__c/recordTypes/Annual_Filing_Form_W_2.recordType-meta.xml
<RecordType>
    <fullName>Annual_Filing_Form_W_2</fullName>
    <active>true</active>
    <label>4. Annual Filing (Form W-2)</label>
</RecordType>