force-app/main/default/objects/Form_Name__c/recordTypes/Annual_Filing_Forms.recordType-meta.xml
<RecordType>
    <fullName>Annual_Filing_Forms</fullName>
    <active>true</active>
    <label>3. Annual Filing Forms</label>
</RecordType>