force-app/main/default/objects/Form_Name__c/recordTypes/Filings.recordType-meta.xml
<RecordType>
    <fullName>Filings</fullName>
    <active>true</active>
    <label>1. Filings</label>
</RecordType>