force-app/main/default/objects/Form_Name__c/recordTypes/Generic_Forms.recordType-meta.xml
<RecordType>
    <fullName>Generic_Forms</fullName>
    <active>true</active>
    <label>2. Generic Forms</label>
</RecordType>